Closed Bug 243373 Opened 22 years ago Closed 22 years ago

StrStrI symbol not found

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect)

x86
Windows XP
defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: dbradley, Assigned: dveditz)

References

Details

(Keywords: fixed1.7, regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7b) Gecko/20040316 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7b) Gecko/20040316 Bug 236312 patch in extra.c line 596 uses StrStrI, but the appropriate library (shlwapi.lib) doesn't appear to be getting linked in. I'm using VC++ from .Net 2003. Reproducible: Always Steps to Reproduce: 1. Get the source 2. Build using VC++ from .Net 2003 3. Actual Results: Linker error Expected Results: no error
I see this using msvc++ 6 as well
Assignee: xpi-engine → dveditz
Depends on: 236312
Flags: blocking1.7?
Keywords: regression
QA Contact: bugzilla
I build debug on msvc 6, and tinderbox builds optimized on msvc 6 and neither build had problems. I'm concerned about comment 1 -- what's going on with your build, Bob? Not hard to believe there's some library difference between vc6 and vc7, and if that's all we could do some _MSC_VER hack in the makefiles. But what's going on between two different vc6 builds?
Explicitly added shlwapi.lib. in my build environment shell32.dll appears to provide a wrapper for StrStrI and it doesn't complain. I think this is fixed, but I can't really test VC.Net and there's no t-box. Let me know whether this fixes it for you.
Status: NEW → ASSIGNED
I have VC6 and use the MS Platform SDK. The batch file I use calls call "c:\Program Files\Microsoft Visual Studio\VC98\Bin\VCVARS32.bat" and then either call "c:\Program Files\Microsoft SDK\SetEnv.bat" /XP32 /RETAIL or call "c:\Program Files\Microsoft SDK\SetEnv.bat" /XP32 /DEBUG depending on type of build. I also have MOZ_PROFILE=1 in the 1.7 build but not the trunk. I get the same failure in both builds however even after a distclean. I haven't tried the debug builds yet since both my optimized 1.7/trunk builds failed. /cygdrive/c/work/mozilla_source/trunk/mozilla/build/cygwin-wrapper link /NOLOGO /OUT:setup.exe /PDB:setup.pdb /SUBSYSTEM:WINDOWS dialogs.obj extra.obj ifuncns.obj setup.obj xpi.obj logging.obj supersede.obj version.obj process.obj shortcut.obj xpnetHook.obj nsE scape.obj setup.res ../../../../dist/lib/mozregsa_s.lib ../../../../dist/lib/jar50_s.lib ../../../../dist/lib/mozz_s.lib ../../../.. /dist/lib/xpnet_s.lib kernel32.lib user32.lib gdi32.lib winmm.lib wsock32.lib advapi32.lib ole32.lib comdlg32.lib shell32.lib versi on.lib Creating library setup.lib and object setup.exp extra.obj : error LNK2001: unresolved external symbol __imp__StrStrIA@8 setup.exe : fatal error LNK1120: 1 unresolved externals make[5]: *** [setup.exe] Error 96 make[5]: Leaving directory `/cygdrive/c/work/mozilla_source/trunk/mozilla/obj-i586-pc-msvc-release/xpinstall/wizard/windows/setup' make[4]: *** [libs] Error 2 make[4]: Leaving directory `/cygdrive/c/work/mozilla_source/trunk/mozilla/obj-i586-pc-msvc-release/xpinstall/wizard/windows' make[3]: *** [libs] Error 2 make[3]: Leaving directory `/cygdrive/c/work/mozilla_source/trunk/mozilla/obj-i586-pc-msvc-release/xpinstall' make[2]: *** [libs] Error 2 make[2]: Leaving directory `/cygdrive/c/work/mozilla_source/trunk/mozilla/obj-i586-pc-msvc-release' make[1]: *** [alldep] Error 2 make[1]: Leaving directory `/cygdrive/c/work/mozilla_source/trunk/mozilla/obj-i586-pc-msvc-release' make: *** [alldep] Error 2
Same problem, VC++ .Net 2003 on WinXP.
Could it be an XP issue, since I would think the shell32.dll would be provided by the OS. My Shell32.dll is dated 2/20/04 and is 8,348,160 bytes
What has the dll to do with a link time issues?
A fix was checked in last night.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a) Gecko/20040512 BuildID 2004051210 When I started the full installer, I got 2 error messages, about an unconnected device, and the missing link to export SHELL32.DLL:StrStrIA I had to download a zip version to get todays nightly working. So this checkin didn´t solve the problem, or is it a new problem? 2004-05-11 23:59 dveditz%cruzio.com mozilla/ xpinstall/ wizard/ windows/ setup/ Makefile.in 1.9 1/1 Fix VC.Net build bustage
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
(In reply to comment #9) > When I started the full installer, I got 2 error messages, about an unconnected > device, and the missing link to export SHELL32.DLL:StrStrIA > I had to download a zip version to get todays nightly working. The same problem occurred also in my environment. Using OS: Windows98 SE (Japanese Version)
just started the stub installer after download from CREATURE, same error, seen on win98. So both exe-installers are corrupt, the zip-package is working. mozilla-win32-stub-installer.exe 13-May-2004 00:08 235k
guess we need to figure out what to do here, and come up with a fix...
Flags: blocking1.7? → blocking1.7+
Here's the info from MS: Minimum DLL Version: shlwapi.dll version 4.71 or later Minimum operating systems Windows 2000, Windows NT 4.0 with Internet Explorer 4.0, Windows 98, Windows 95 with Internet Explorer 4.0 So theoretically, this should work. Can the people who are failing check to see if shlwapi.dll is on their system?
We don't require IE4, do we?
we don't (and we're working on not requiring nt4), mkaply's looking into rolling our own strstri
C:\WINDOWS\SYSTEM\SHLWAPI.DLL version 5.50.4807.2300 Windows is Win98 with SP1, Celeron333, 96 MB RAM. mozilla-win32-stub-installer.exe 13-May-2004 13:04 235k still shows this bug.
So we can't trust the MS docs. We need to roll our own strstri instead of using MS.
This is probably more efficient anyway
Attachment #148443 - Flags: superreview?(mkaply)
Attachment #148443 - Flags: review?(ssu0262)
Attachment #148443 - Flags: approval1.7?
Comment on attachment 148443 [details] [diff] [review] Avoid StrStrI (-w diff) r=ssu
Attachment #148443 - Flags: review?(ssu0262) → review+
Comment on attachment 148443 [details] [diff] [review] Avoid StrStrI (-w diff) sr=mkaply (I think sr from me is OK since this is technically platform specific code and in ssu's domain) a=mkaply
Attachment #148443 - Flags: superreview?(mkaply)
Attachment #148443 - Flags: superreview+
Attachment #148443 - Flags: approval1.7?
Attachment #148443 - Flags: approval1.7+
fix checked in, trunk and branch
Status: REOPENED → RESOLVED
Closed: 22 years ago22 years ago
Keywords: fixed1.7
Resolution: --- → FIXED
(In reply to comment #13) My Computer's shlwapi.dll is Ver.6.00.2800.1400 (2004.01.21 18:29:08) OS:Windows 98SE (Japanese Version) By 2004-05-13-09-trunk, installation was not completed by the same phenomenon.
The problem of relevance was canceled by 2004-05-13-16-trunk.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: