bug 243373 StrStrI not available on some windows systems r=ssu,sr=mkaply,a=mkaply